# cookiescope

./: .gitignore  DEVELOPMENT.md  README.md  TODO.md  cookiescope  pyproject.toml  requirements.txt
cookiescope/: cookies.py  main.py  utility.py
cookiescope/browsers/: __init__.py  base.py  chrome.py  chrome_generic.py  chromium.py  edge.py  firefox.py  safari.py
cookiescope/decryptors/: base.py  linux.py  linux_macos.py  macos.py  posix.py  windows.py
cookiescope/extractors/: __init__.py  binary.py  sqlite.py
tools/: build.sh  testpypi-install.sh  testpypi-upload.sh
